# guidoar

./: .gitignore  .travis.yml  changelog.txt  readme.txt  version
cmake/: .gitignore  CMakeLists.txt  install  makefile
doc/: .gitignore  Doxyfile  footer.html
doc/icmc2012/: ScoreComposition.tex
doc/icmc2012/rsrc/: 4voices.gmn
doc/internal/: Doxyfile
doc/jim2012/: jim2012.tex
doc/jim2012/conf/: demos.txt  scorecomp.key
doc/lang/: lang-definitions1.tex  lang-v1.tex  lang-v3.tex  lang-v4.tex  lang-v5.tex  lang-v6.tex
doc/smc2009/: smc09.tex  smc2009.bib
doc/smc2009/paperTemplates/: SMC2009PaperTemplate_TEX.tex  SMC2009PaperTemplate_Word.doc
doc/smc2009/rsrc/: Makefile
gmn/new-tags-v1.43/: quarters.gmn
guidocalculus/: readme.txt
guidocalculus/package/: makefile
guidocalculus/src/: GuidoCalculus.pro  shared.pri
guidocalculus/src/GUI/: MainWindow.cpp
guidocalculus/src/GuidoAR/: QGuidoAR.cpp  QGuidoAR.h
guidocalculus/src/GuidoItemContainer/: QGuidoItemContainer.cpp  QGuidoItemContainer.h  QSimpleItemContainer.cpp
guidocalculus/src/rsc/: GuidoCalculus.rc  GuidoCalculusInfo.plist  guido.icns  guidoar.qrc
lang/javascript/: Makefile  libGuidoAR.js  tests.js
lang/javascript/src/: bindings.cpp  wrapper.cpp  wrapper.h
lang/typescript/: libGuidoAR.d.ts  libGuidoAR.ts  readme.txt
lang/typescript/test/: guidoARTest.ts  main.ts
linux/: makefile
macosx/: Info.plist
macosx/English.lproj/: InfoPlist.strings
macosx/libguidoar.xcodeproj/: project.pbxproj
macosx/libguidoengine.xcodeproj/: project.pbxproj
rsrc/: libguidoar.rc  resource.h
samples/bluerondo/: bba.gmn  bbb.gmn  bluerondo
samples/layout/: format2.gmn  layout1.gmn  layout2.gmn
samples/repeats/: repeathead.gmn  repeattail.gmn  repeatwhole.gmn
samples/slurs/: slur1-2.gmn  slurhead.gmn  slurtail.gmn  slurwhole.gmn
samples/ties/: wholehead.gmn  wholetail.gmn  wholewhole.gmn
src/guido/: guidocomment.cpp  guidocomment.h  guidoelement.cpp  guidoelement.h  guidotags.h  guidovariable.cpp  guidovariable.h
src/guido/abstract/: ARChord.cpp  ARChord.h  ARFactory.cpp  ARFactory.h  ARNote.cpp  ARNote.h  AROthers.cpp  AROthers.h  ARTag.cpp  ARTag.h  ARTypes.h
src/interface/: export.h  guidorational.h  libguidoar.cpp  libguidoar.h  rational.h
src/lang/: exceptions.cpp  exceptions.h  guidoEnv.h  guidoEval.cpp  guidoEval.h
src/lang/expressions/: guidoAbstractExp.cpp  guidoAbstractExpr.cpp  guidoAbstractExpr.h  guidoApplExp.cpp  (+25 more)
src/lib/: ctree.h  export.h  functor.h  gar_smartpointer.h  guidorational.cpp  rational.cpp  rational.h  smartpointer.h  streambeautifuller.cpp  streambeautifuller.h  tree_browser.h
src/midi/: midiconverter.cpp  midiconverter.h
src/midisharelight/: midifile.h
src/operations/: bottomOperation.cpp  bottomOperation.h  durationOperation.cpp  durationOperation.h  eheadOperation.cpp  eheadOperation.h  etailOperation.cpp  etailOperation.h  headOperation.cpp  headOperation.h  interleaveOperation.cpp  interleaveOperation.h  markers.cpp  markers.h  mirrorOperation.cpp  mirrorOperation.h  normalizeOperation.cpp  normalizeOperation.h  operation.h  parOperation.cpp  parOperation.h  pitchApplyOperation.cpp  pitchApplyOperation.h  rythmApplyOperation.cpp  rythmApplyOperation.h  seqOperation.cpp  seqOperation.h  tailOperation.cpp  tailOperation.h  topOperation.cpp  topOperation.h  transposeOperation.cpp  transposeOperation.h  vheadOperation.cpp  vheadOperation.h  vtailOperation.cpp  vtailOperation.h
src/parser/: gmnreader.h  guido.cpp  guido.h  guido.l  guido.y  guidolex.c++  guidolex.cpp  guidoparse.c++  guidoparse.cpp  guidoparse.h++  guidoparse.hpp  guidoparser.cpp  guidoparser.h  makefile  parser.cpp  unicode.c++  unicode.cpp
src/visitors/: clonevisitor.cpp  clonevisitor.h  counteventsvisitor.cpp  counteventsvisitor.h  countvisitor.h  durationvisitor.cpp  durationvisitor.h  event2timevisitor.cpp  event2timevisitor.h  firstpitchvisitor.cpp  firstpitchvisitor.h  gmn2tabvisitor.cpp  gmn2tabvisitor.h  gmnvisitor.cpp  gmnvisitor.h  midicontextvisitor.cpp  midicontextvisitor.h  pitchvisitor.cpp  pitchvisitor.h  rythmvisitor.cpp  rythmvisitor.h  unrolled_guido_browser.cpp  unrolled_guido_browser.h  visitable.h  visitor.h
tools/: Makefile  common.cxx  guido2midi.cpp  guido2tab.cpp  guido2unrolled.cpp  guidoapplypitch.cpp  guidoapplyrythm.cpp  guidoarversion.cpp  guidobottom.cpp  guidobottomn.cpp  guidocheck.cpp  guidoclone.cpp  guidoduration.cpp  guidoev2time.cpp  guidoevhead.cpp  guidoevheadn.cpp  guidoevtail.cpp  guidoevtailn.cpp  guidohead.cpp  guidoheadt.cpp  guidoinfo.cpp  guidointerleave.cpp  guidolang.cpp  guidomirror.cpp  guidomultduration.cpp  guidonorm.cpp  guidopar.cpp  guidoparright.cpp  guidoread.cpp  guidorinterleave.cpp  guidorpar.cpp  guidoseq.cpp  guidosetdur.cpp  guidosetduration.cpp  guidosetdurationd.cpp  guidotail.cpp  guidotailt.cpp  guidotime2ev.cpp  guidotop.cpp  guidotopn.cpp  (+5 more)
tools/desc/: guidobottom.h  guidobottomn.h  guidoevhead.h  guidoevheadn.h  guidoevtail.h  guidoevtailn.h  guidohead.h  guidoheadt.h  guidomirror.h  guidomultduration.h  guidopar.h  guidoparright.h  guidoseq.h  guidosetduration.h  guidosetdurationd.h  guidotail.h  guidotailt.h  guidotop.h  guidotopn.h  guidotranspose.h  guidotransposei.h
validation/: Makefile  ignored-min.txt  ignored.txt
win32/: Player32.lib  guidolib.dsw  libguidoar.rc  midishare.ini  msMMSystem.ini  mshare32.lib  resource.h
win32/guido2midi/: guido2midi.dsp
win32/guidoar/: guidoar.dsp
win32/guidodur/: guidodur.dsp
win32/guidoevhead/: guidoevhead.dsp  guidoevhead.vcproj
win32/guidoevtail/: guidoevtail.dsp  guidoevtail.vcproj
win32/guidohead/: guidohead.dsp  guidohead.vcproj
win32/guidoinfo/: guidoinfo.dsp  guidoinfo.vcproj
win32/guidopar/: guidopar.dsp
win32/guidoread/: guidoread.dsp
win32/guidorpar/: guidorpar.dsp
win32/guidoseq/: guidoseq.dsp
win32/guidotail/: guidotail.dsp  guidotail.vcproj
win32/guidotranspose/: guidotranspose.dsp
win32/guidovhead/: guidovhead.dsp  guidovhead.vcproj
win32/guidovtail/: guidovtail.dsp  guidovtail.vcproj
win32/lib/: Player.h  Player32.lib
(+60 files in other folders)
